add stylesheet à pagina

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset="UTF-8">
         <title>portfólio web: miranda</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
 
 
     </head>
@@ -15,13 +16,13 @@
         <img src="photo.jpg" id="foto" alt="pessoa branca com cabelos loiros ondulados, em frente a uma parede rosa, utilizando um brinco argola na orelha esquerda e com um raio de luz refletindo na altura de seu olho direito" width="300px">
 
         <ol>
-            <li><a href="#descricao">Descrição</a></li>
-            <li><a href="habilidades">Habilidades</a></li>
-            <li><a href="sugestao-leitura">Sugestão de leitura</a></li>
+            <li><a href="#descricao" class="elements-size">Descrição</a></li>
+            <li><a href="habilidades" class="elements-size">Habilidades</a></li>
+            <li><a href="sugestao-leitura" class="elements-size">Sugestão de leitura</a></li>
         </ol>
 
 
-        <p id="descricao">Cria do cerrado brasiliense, fruto de contracultura e cena underground LGBTQIA+ candanga. Artista visual e produtor cultural, atuando no terceiro setor desde 2017. Atualmente migrando carreiras para desenvolvimento full-stack. 
+        <p id="descricao"><span id="destaque">Cria do cerrado brasiliense, fruto de contracultura e cena underground LGBTQIA+ candanga. Artista visual e produtor cultural, atuando no terceiro setor desde 2017. Atualmente migrando carreiras para desenvolvimento full-stack.</span>  
         <br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae dui ac lectus ornare porta vel et sapien. Morbi efficitur felis sed arcu ultricies, in cursus ipsum posuere. Nulla ac purus ipsum. Donec sem libero, congue eget mauris id, mollis ultrices ipsum. Etiam porta eros nisl, at hendrerit lacus molestie in. Vestibulum ipsum sapien, venenatis non turpis vitae, ullamcorper pretium orci. Phasellus porttitor velit vel eleifend fringilla. Suspendisse dignissim turpis odio, at interdum mi vehicula et.
         <br>
