implementação box model aplicada

--- a/index.html
+++ b/index.html
@@ -13,36 +13,46 @@
     <body>
 
         <h1>Miranda Almeida Guimarães Duarte</h1>
-        <img src="photo.jpg" id="foto" alt="pessoa branca com cabelos loiros ondulados, em frente a uma parede rosa, utilizando um brinco argola na orelha esquerda e com um raio de luz refletindo na altura de seu olho direito" width="300px">
 
-        <ol>
-            <li><a href="#descricao" class="elements-size">Descrição</a></li>
-            <li><a href="habilidades" class="elements-size">Habilidades</a></li>
-            <li><a href="sugestao-leitura" class="elements-size">Sugestão de leitura</a></li>
-        </ol>
+        <div class="foto">
+            <img src="photo.jpg" id="foto" alt="pessoa branca com cabelos loiros ondulados, em frente a uma parede rosa, utilizando um brinco argola na orelha esquerda e com um raio de luz refletindo na altura de seu olho direito" width="300px">
+        </div>
 
+        <div class="sumario">
+            <ol>
+                <li><a href="#descricao" class="elements-size">Descrição</a></li>
+                <li><a href="habilidades" class="elements-size">Habilidades</a></li>
+                <li><a href="sugestao-leitura" class="elements-size">Sugestão de leitura</a></li>
+            </ol>
+        </div>
 
-        <p id="descricao"><span id="destaque">Cria do cerrado brasiliense, fruto de contracultura e cena underground LGBTQIA+ candanga. Artista visual e produtor cultural, atuando no terceiro setor desde 2017. Atualmente migrando carreiras para desenvolvimento full-stack.</span>  
-        <br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae dui ac lectus ornare porta vel et sapien. Morbi efficitur felis sed arcu ultricies, in cursus ipsum posuere. Nulla ac purus ipsum. Donec sem libero, congue eget mauris id, mollis ultrices ipsum. Etiam porta eros nisl, at hendrerit lacus molestie in. Vestibulum ipsum sapien, venenatis non turpis vitae, ullamcorper pretium orci. Phasellus porttitor velit vel eleifend fringilla. Suspendisse dignissim turpis odio, at interdum mi vehicula et.
-        <br>
-        Donec in urna consectetur, feugiat metus ac, tristique lorem. Cras non magna ligula. Aenean feugiat mi eu neque faucibus volutpat. Ut vehicula pharetra odio, eu porta velit condimentum vel. Suspendisse dui diam, tincidunt quis tempor non, tempor vel eros. Mauris nec purus pharetra, consectetur urna suscipit, venenatis lectus. Suspendisse ullamcorper facilisis tortor non volutpat. Integer ut lorem ante. In lacinia a nisl sed consectetur. 
-        <br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae dui ac lectus ornare porta vel et sapien. Morbi efficitur felis sed arcu ultricies, in cursus ipsum posuere. Nulla ac purus ipsum. Donec sem libero, congue eget mauris id, mollis ultrices ipsum. Etiam porta eros nisl, at hendrerit lacus molestie in. Vestibulum ipsum sapien, venenatis non turpis vitae, ullamcorper pretium orci. Phasellus porttitor velit vel eleifend fringilla. Suspendisse dignissim turpis odio, at interdum mi vehicula et.
-        <br>
-        Donec in urna consectetur, feugiat metus ac, tristique lorem. Cras non magna ligula. Aenean feugiat mi eu neque faucibus volutpat. Ut vehicula pharetra odio, eu porta velit condimentum vel. Suspendisse dui diam, tincidunt quis tempor non, tempor vel eros. Mauris nec purus pharetra, consectetur urna suscipit, venenatis lectus. Suspendisse ullamcorper facilisis tortor non volutpat. Integer ut lorem ante. In lacinia a nisl sed consectetur. 
-        </p>
+        <div class="descritivo">
+            <p id="descricao"><span id="destaque">Cria do cerrado brasiliense, fruto de contracultura e cena underground LGBTQIA+ candanga. Artista visual e produtor cultural, atuando no terceiro setor desde 2017. Atualmente migrando carreiras para desenvolvimento full-stack.</span>  
+            <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae dui ac lectus ornare porta vel et sapien. Morbi efficitur felis sed arcu ultricies, in cursus ipsum posuere. Nulla ac purus ipsum. Donec sem libero, congue eget mauris id, mollis ultrices ipsum. Etiam porta eros nisl, at hendrerit lacus molestie in. Vestibulum ipsum sapien, venenatis non turpis vitae, ullamcorper pretium orci. Phasellus porttitor velit vel eleifend fringilla. Suspendisse dignissim turpis odio, at interdum mi vehicula et.
+            <br>
+            Donec in urna consectetur, feugiat metus ac, tristique lorem. Cras non magna ligula. Aenean feugiat mi eu neque faucibus volutpat. Ut vehicula pharetra odio, eu porta velit condimentum vel. Suspendisse dui diam, tincidunt quis tempor non, tempor vel eros. Mauris nec purus pharetra, consectetur urna suscipit, venenatis lectus. Suspendisse ullamcorper facilisis tortor non volutpat. Integer ut lorem ante. In lacinia a nisl sed consectetur. 
+            <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae dui ac lectus ornare porta vel et sapien. Morbi efficitur felis sed arcu ultricies, in cursus ipsum posuere. Nulla ac purus ipsum. Donec sem libero, congue eget mauris id, mollis ultrices ipsum. Etiam porta eros nisl, at hendrerit lacus molestie in. Vestibulum ipsum sapien, venenatis non turpis vitae, ullamcorper pretium orci. Phasellus porttitor velit vel eleifend fringilla. Suspendisse dignissim turpis odio, at interdum mi vehicula et.
+            <br>
+            Donec in urna consectetur, feugiat metus ac, tristique lorem. Cras non magna ligula. Aenean feugiat mi eu neque faucibus volutpat. Ut vehicula pharetra odio, eu porta velit condimentum vel. Suspendisse dui diam, tincidunt quis tempor non, tempor vel eros. Mauris nec purus pharetra, consectetur urna suscipit, venenatis lectus. Suspendisse ullamcorper facilisis tortor non volutpat. Integer ut lorem ante. In lacinia a nisl sed consectetur. 
+            </p>
+        </div>
 
-        <ul id="habilidades">
-            <li><strong>Affinity Designer</strong></li>
-            <li>VS Code</li>
-            <li>WordPress</li>
-            <li>Elementor</li>
-        </ul>
+        <div class="bloco-skills">
+            <ul id="habilidades">
+                <li><strong>Affinity Designer</strong></li>
+                <li>VS Code</li>
+                <li>WordPress</li>
+                <li>Elementor</li>
+            </ul>
+        </div>
 
-        <p id="sugestao-leitura">Sugestão de leitura: <a href="https://www.qiaocollective.com/" target="_blank">Qiao Collective</a> | <em>Coletivo de mídia diaspórica chinesa que desafia a agressão midiática imperialista estadounidense</em></p>
+        <div class="final">
+            <p id="sugestao-leitura">Sugestão de leitura: <a href="https://anovademocracia.com.br/" target="_blank">A Nova Democracia</a> | <em>Imprensa popular e democrática</em></p>
 
-        <p><a href="#foto">Retornar ao topo</a></p>
+            <p><a href="#foto">Retornar ao topo</a></p>
+        </div>
         
 
 
